--- a/src/pages/title-metadata/components/title-metadata-header/components/DownloadEmetModal/DownloadEmetModal.scss
+++ b/src/pages/title-metadata/components/title-metadata-header/components/DownloadEmetModal/DownloadEmetModal.scss
@@ -34,6 +34,9 @@
 
 .download-emet-modal__button {
     @include margin(0, 0, 0, 3);
+    a {
+        color: white;
+    }
 }
 
 .download-emet-modal__buttons {
