--- a/src/pages/title-metadata/TitleMetadataView.scss
+++ b/src/pages/title-metadata/TitleMetadataView.scss
@@ -1,5 +1,64 @@
+@import '~@vubiquity-nexus/portal-styles/scss/color-palette';
+@import '~@vubiquity-nexus/portal-styles/scss/atlaskit/mixins';
+
 .nexus-c-title-metadata {
     height: 100%;
     display: flex;
     flex-direction: column;
+}
+
+.nexus-c-title-metadata__main-container {
+    display: flex;
+    width: 100%;
+}
+
+.nexus-c-title-tab-menu-container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.nexus-c-title-metadata__select-container {
+    display: flex;
+    justify-content: flex-end;
+    width: 50%;
+}
+
+.nexus-c-title-metadata__tab-menu {
+    .p-tabmenu-nav {
+        background: none;
+        border: none;
+    }
+
+    .p-tabmenuitem {
+        @include margin(0, 0, 1, 3);
+
+        .p-menuitem-link {
+            border: none !important;
+            background: none !important;
+            color: palette(black, 50);
+            padding: 1.25rem;
+            font-weight: 700;
+            border-radius: 6px;
+            transition: box-shadow 0.2s;
+        }
+
+        .p-menuitem-link:focus {
+            box-shadow: none !important;
+        }
+    }
+
+    .p-highlight {
+        .p-menuitem-link {
+            background: palette(black, 20) !important;
+            color: palette(black, 100) !important;
+            border: none !important;
+        }
+    }
+}
+
+.nexus-c-title-metadata__create-btn {
+    display: flex;
+    flex-direction: row;
+    align-self: center;
 }
