--- a/src/pages/title-metadata/components/title-metadata-header/TitleMetadataHeader.scss
+++ b/src/pages/title-metadata/components/title-metadata-header/TitleMetadataHeader.scss
@@ -20,11 +20,14 @@
 .nexus-c-title-metadata-header__label {
     font-size: 29px;
     color: map-get($neutrals, N800);
+    display: flex;
+    align-self: flex-start;
 }
 
 .nexus-c-title-metadata-header__buttons-wrapper {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     margin-left: auto;
+    width: 100%;
 }
