PORT-4995: Code optimized

--- a/src/styles/prime-custom.scss
+++ b/src/styles/prime-custom.scss
@@ -197,5 +197,5 @@ $button-font-size: 13px;
 
 .p-toast .p-toast-message.p-toast-message-success, 
 .p-toast .p-toast-message.p-toast-message-error {
-    background: white;
+    background: palette(white, 100);;
 }
