--- a/src/pages/title-metadata/components/title-metadata-header/components/CloudDownloadButton/CloudDownloadButton.scss
+++ b/src/pages/title-metadata/components/title-metadata-header/components/CloudDownloadButton/CloudDownloadButton.scss
@@ -1,6 +1,6 @@
 @import '~@vubiquity-nexus/portal-styles/scss/atlaskit/mixins';
 
-.cloud-download-button {
+.nexus-c-button-cloud-download {
     @include margin(0, 8, 0, 3);
     @include padding(0);
 }
