--- a/src/pages/title-metadata/components/title-metadata-header/components/DownloadEmetModal/DownloadEmetModal.scss
+++ b/src/pages/title-metadata/components/title-metadata-header/components/DownloadEmetModal/DownloadEmetModal.scss
@@ -1,26 +1,26 @@
 @import '~@vubiquity-nexus/portal-styles/scss/atlaskit/mixins';
 
-.download-emet-modal {
+.nexus-c-download-emet-modal {
     @include margin(0, 0, 5, 0);
 }
 
-.download-emet-modal__field {
+.nexus-c-download-emet-modal__field {
     display: flex;
     justify-content: space-between;
     align-items: center;
     @include margin(0, 0, 4, 0);
 }
 
-.download-emet-modal__fields {
+.nexus-c-download-emet-modal__fields {
     @include margin(0, 0, 6, 0);
 }
 
-.download-emet-modal__select {
+.nexus-c-download-emet-modal__select {
     width: 100%;
     max-width: 25rem;
 }
 
-.download-emet-modal__select-wrapper {
+.nexus-c-download-emet-modal__select-wrapper {
     width: 100%;
     max-width: 25rem;
     > div {
@@ -28,24 +28,24 @@
     }
 }
 
-.download-emet-modal__subtitle {
+.nexus-c-download-emet-modal__subtitle {
     @include margin(0, 0, 6, 0);
 }
 
-.download-emet-modal__label {
+.nexus-c-download-emet-modal__label {
     text-transform: uppercase;
     @include padding(0, 1, 0, 0);
 }
 
-.download-emet-modal__button {
+.nexus-c-download-emet-modal__button {
     @include margin(0, 0, 0, 3);
 }
 
-.download-emet-modal__buttons {
+.nexus-c-download-emet-modal__buttons {
     display: flex;
     justify-content: flex-end;
 }
 
-.cancel-button {
+.nexus-c-cancel-button {
     @include margin(0, 3, 0, 0);
 }
