--- a/src/pages/title-metadata/components/title-metadata-bottom-header-part/TitleMetadataBottomHeaderPart.scss
+++ b/src/pages/title-metadata/components/title-metadata-bottom-header-part/TitleMetadataBottomHeaderPart.scss
@@ -5,3 +5,12 @@
   align-self: flex-end;
   min-height: 52px;
 }
+
+.nexus-c-title-date-picker-container {
+  display: flex;
+  min-height: 52px;
+  width: 100%;
+  justify-content: space-between;
+  align-items: flex-end;
+  align-items: center;
+}
