--- a/packages/ui/src/elements/nexus-saved-table-dropdown/NexusSavedTableDropdown.scss
+++ b/packages/ui/src/elements/nexus-saved-table-dropdown/NexusSavedTableDropdown.scss
@@ -2,10 +2,11 @@
 @import '~@vubiquity-nexus/portal-styles/scss/atlaskit/colors';
 
 .nexus-c-dop-tasks-dropdown {
-    @include addSpacing('width', 50);
-    @include margin(0, 10, 0, 10);
+    // @include addSpacing('width', 50);
+    @include margin(0, 0, 0, 2);
     display: flex;
     align-items: center;
+    width: 130px;
 
     button {
         width: 100%;
