--- a/src/pages/title-metadata/TitleMetadataView.scss
+++ b/src/pages/title-metadata/TitleMetadataView.scss
@@ -24,8 +24,7 @@
     justify-content: flex-end;
     padding-right: 43px;
     position: absolute;
-    width: 100%;
-    left: 0px;
+    right: 0px;
 }
 
 .nexus-c-title-metadata__tab-menu {
@@ -65,4 +64,8 @@
     display: flex;
     flex-direction: row;
     align-self: center;
+}
+
+.nexus-c-title-synclog__table-container {
+    @include padding(6, 6, 10, 6);
 }
