--- a/src/pages/title-metadata/TitleMetadataView.scss
+++ b/src/pages/title-metadata/TitleMetadataView.scss
@@ -38,11 +38,12 @@
             .p-menuitem-link {
                 border: none;
                 background: none;
-                color: palette(black, 50);
+                color: palette(black, 55);
                 padding: 1.25rem;
                 font-weight: 700;
                 border-radius: 6px;
                 transition: box-shadow 0.2s;
+                height: 40px;
             }
     
             .p-menuitem-link:focus {
@@ -51,16 +52,11 @@
         }
 
         .p-highlight {
-            .p-menuitem-link {
+            .p-menuitem-link, .p-menuitem-link:hover {
                 background: palette(black, 10);
                 color: palette(black, 100);
                 border: none;
-            }
-
-            .p-menuitem-link:hover {
-                background: palette(black, 10);
-                color: palette(black, 100);
-                border: none;
+                height: 40px;
             }
         }
     }
