PORT-5385: Design optimized

--- a/src/pages/title-metadata/components/title-metadata-header/TitleMetadataHeader.scss
+++ b/src/pages/title-metadata/components/title-metadata-header/TitleMetadataHeader.scss
@@ -22,6 +22,7 @@
     color: map-get($neutrals, N800);
     display: flex;
     align-self: flex-start;
+    position: absolute;
 }
 
 .nexus-c-title-metadata-header__buttons-wrapper {
