--- a/src/pages/sync-log/components/SyncLogDatePicker/SyncLogDatePicker.scss
+++ b/src/pages/sync-log/components/SyncLogDatePicker/SyncLogDatePicker.scss
@@ -6,6 +6,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-left: 44px;
 }
 
 .nexus-c-sync-log-table__date-field {
