--- a/src/styles/prime-custom.scss
+++ b/src/styles/prime-custom.scss
@@ -3,6 +3,12 @@
 // Variables
 $button-height: 32px;
 $button-font-size: 13px;
+$element-margin-bottom: 18px;
+
+// Field Wrapper
+.p-field {
+    position: relative;
+}
 
 // Buttons Related
 .p-button {
@@ -204,6 +210,7 @@ $button-font-size: 13px;
 .p-inputtext {
     &.p-component {
         width: 100%;
+        margin-bottom: $element-margin-bottom;
     }
 }
 
@@ -211,6 +218,13 @@ $button-font-size: 13px;
 .p-calendar {
     &.p-component {
         width: 100%;
+        margin-bottom: $element-margin-bottom;
+
+        .p-inputtext {
+            &.p-component {
+                margin-bottom: 0;
+            }
+        }
 
         .p-button {
             &.p-component {
@@ -226,6 +240,7 @@ $button-font-size: 13px;
 .p-dropdown {
     &.p-component {
         width: 100%;
+        margin-bottom: $element-margin-bottom;
     }
 }
 
@@ -233,5 +248,20 @@ $button-font-size: 13px;
 .p-multiselect {
     &.p-component {
         width: 100%;
+        margin-bottom: $element-margin-bottom;
     }
+}
+
+// Field Error Message
+.p-error-message {
+    position: absolute;
+    left: 2px;
+    bottom: 0;
+    font-size: 12px;
+    color: rgb(222, 53, 11);
+}
+
+// Field Required Asterisk
+.p-field-required {
+    color: rgb(222, 53, 11);
 }
