feature/PORT-5376: Row enhancements

--- a/src/styles/prime-custom.scss
+++ b/src/styles/prime-custom.scss
@@ -103,6 +103,10 @@ $button-font-size: 13px;
             }
         }
 
+        &.p-button-icon-only {
+            width: 32px;
+        }
+
         svg {
             width: 16px;
             height: 16px;
