feature/PORT-5376: Update tests. prime-custom.scss

--- a/src/styles/prime-custom.scss
+++ b/src/styles/prime-custom.scss
@@ -112,6 +112,7 @@ $button-font-size: 13px;
             height: 16px;
             margin: 0 4px;
             fill: palette(black, 80);
+            color: palette(black, 80);
         }
     }
 
