--- a/src/pages/title-metadata/components/title-metadata-header/components/CloudDownloadButton/CloudDownloadButton.scss
+++ b/src/pages/title-metadata/components/title-metadata-header/components/CloudDownloadButton/CloudDownloadButton.scss
@@ -6,3 +6,14 @@
     display: flex;
     align-items: center;
 }
+
+.nexus-c-button-dialog-for-emet-download {
+    .p-dialog-header-icons {
+        display: none;
+    }
+
+    .p-dialog-header {
+        border: none;
+    }
+
+}
