--- a/src/styles/prime-custom.scss
+++ b/src/styles/prime-custom.scss
@@ -249,6 +249,7 @@ $button-font-size: 13px;
             .p-menuitem-link:hover {
                 color: palette(black, 100);
                 background: palette(black, 5);
+                text-decoration: none;
             }
 
             .p-menuitem-link:active {
