feature/PORT-5377: Form Enhancements

--- a/src/styles/prime-custom.scss
+++ b/src/styles/prime-custom.scss
@@ -337,3 +337,12 @@ $element-margin-bottom: 18px;
         }
     }
 }
+
+// Panel
+.p-panel {
+    &.p-component {
+        .p-panel-header {
+            border-radius: 5px;
+        }
+    }
+}
