--- a/packages/ui/src/elements/nexus-person/NexusPerson.scss
+++ b/packages/ui/src/elements/nexus-person/NexusPerson.scss
@@ -12,6 +12,17 @@
     grid-template-columns: 2fr 1fr;
 }
 
+.nexus-c-nexus-person-avails__two-col {
+    display: grid;
+    background: map-get($neutrals, N10);
+    grid-template-columns: 2fr 1fr;
+    border: 1px solid map-get($neutrals, N40);
+    padding: 5px 3px;
+    &:hover {
+        background: map-get($neutrals, N30);
+    }
+}
+
 .nexus-c-nexus-person__info {
     display: flex;
     align-items: center;
