feature/PORT-5377: Addition of missing style

--- a/src/styles/prime-custom.scss
+++ b/src/styles/prime-custom.scss
@@ -110,6 +110,10 @@ $element-margin-bottom: 18px;
             }
         }
 
+        &.p-button-icon-only {
+            width: 32px;
+        }
+
         svg {
             width: 16px;
             height: 16px;
