--- a/packages/ui/src/elements/nexus-person/NexusPerson.scss
+++ b/packages/ui/src/elements/nexus-person/NexusPerson.scss
@@ -8,14 +8,13 @@
 }
 
 .nexus-c-nexus-person__two-col {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
+    display: flex;
 }
 
 .nexus-c-nexus-person-avails__two-col {
-    display: grid;
+    display: flex;
     background: map-get($neutrals, N10);
-    grid-template-columns: 2fr 1fr;
+    // grid-template-columns: 2fr 1fr;
     border: 1px solid map-get($neutrals, N40);
     padding: 5px 3px;
     &:hover {
@@ -27,6 +26,20 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: calc(100% - 110px);
+    > div:first-child {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        @include margin(0, 2, 0, 0);
+    }
+}
+
+.nexus-c-nexus-person-avails__info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: calc(100% - 30px);
     > div:first-child {
         white-space: nowrap;
         overflow: hidden;
