--- a/src/pages/title-metadata/components/catalogue-owner/CatalogueOwner.scss
+++ b/src/pages/title-metadata/components/catalogue-owner/CatalogueOwner.scss
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin-left: 32px;
 }
 
 .nexus-c-catalogue-owner-select {
