--- a/src/styles/legacy/_variables.scss
+++ b/src/styles/legacy/_variables.scss
@@ -192,6 +192,7 @@ $grid-breakpoints: (
     md: 768px,
     lg: 992px,
     xl: 1200px,
+    xxl: 1450px,
 ) !default;
 
 @include _assert-ascending($grid-breakpoints, '$grid-breakpoints');
@@ -206,6 +207,7 @@ $container-max-widths: (
     md: 720px,
     lg: 960px,
     xl: 1140px,
+    xxl: 1400px,
 ) !default;
 
 @include _assert-ascending($container-max-widths, '$container-max-widths');
