--- a/src/pages/title-metadata/components/title-metadata-header/TitleMetadataHeader.scss
+++ b/src/pages/title-metadata/components/title-metadata-header/TitleMetadataHeader.scss
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    @include margin(6);
+    @include margin(6, 6, 3, 6);
 
     .nexus-c-title-metadata__sync-btn {
         @include margin(0, 0, 0, 3);
