--- a/src/pages/title-metadata/components/title-metadata-header/components/CloudDownloadButton/CloudDownloadButton.scss
+++ b/src/pages/title-metadata/components/title-metadata-header/components/CloudDownloadButton/CloudDownloadButton.scss
@@ -1,7 +1,7 @@
 @import '~@vubiquity-nexus/portal-styles/scss/atlaskit/mixins';
 
 .nexus-c-button-cloud-download {
-    @include padding(0);
+    @include margin(0, 0, 0, 3);
     display: flex;
     align-items: center;
 }
