--- a/src/pages/settings/SettingsPage.scss
+++ b/src/pages/settings/SettingsPage.scss
@@ -1,9 +1,20 @@
+@import '~@vubiquity-nexus/portal-styles/scss/color-palette';
+
 .nexus-c-settings-page {
     // TODO: Remove background
     background: white;
     gap: 20px;
     .nexus-c-settings-content {
         overflow: hidden;
+        .entry {
+            border-bottom: 1px solid palette(black, 10);
+            //.nexus-c-entity {
+            //    color: palette(black, 55);
+            //    &:hover {
+            //        color: palette(black, 100);
+            //    }
+            //}
+        }
     }
 
     .nexus-c-config-options-wrapper {
