--- a/src/styles/bootstrap.scss
+++ b/src/styles/bootstrap.scss
@@ -8,8 +8,8 @@
 
 .row {
     &.nexus-c-section {
-        margin-top: 16px;
-        margin-bottom: 16px;
+        padding-top: 16px;
+        padding-bottom: 16px;
     }
 
     > * {
