--- a/src/pages/settings/SettingsPage.scss
+++ b/src/pages/settings/SettingsPage.scss
@@ -6,17 +6,8 @@
     gap: 20px;
     .nexus-c-settings-content {
         overflow: hidden;
-        .entry {
+        .nexus-c-settings-entry {
             border-bottom: 1px solid palette(black, 10);
-            //.nexus-c-entity {
-            //    color: palette(black, 55);
-            //    &:hover {
-            //        color: palette(black, 100);
-            //    }
-            //}
         }
-    }
-
-    .nexus-c-config-options-wrapper {
     }
 }
