--- a/src/pages/settings/enpoint-container/EndpointContainer.scss
+++ b/src/pages/settings/enpoint-container/EndpointContainer.scss
@@ -4,6 +4,10 @@
             padding-left: 12px;
             padding-right: 12px;
 
+            .nexus-c-divider-wrapper {
+                padding-right: 12px;
+            }
+
             &.nexus-c-search-wrapper-padding-right {
                 padding-right: 3px;
             }
