PORT-5498: Toasts logic updated

--- a/src/styles/prime-custom.scss
+++ b/src/styles/prime-custom.scss
@@ -256,6 +256,7 @@ $element-margin-bottom: 18px;
     }
 }
 
+.p-toast .p-toast-message.p-toast-message-warn,
 .p-toast .p-toast-message.p-toast-message-success,
 .p-toast .p-toast-message.p-toast-message-error {
     background: palette(white, 100);
