--- a/packages/styles/scss/color-palette.scss
+++ b/packages/styles/scss/color-palette.scss
@@ -15,13 +15,13 @@ $palette: (
  * Usage: background: palette(red, 20);
  */
 @function palette($color, $tone) {
-    @warn map-get($palette,$color);
+    //@warn map-get($palette,$color);
 
     $transparency-list: 100, 80, 55, 20, 10, 8, 5, 2, 0;
     @if map-has-key($palette, $color) {
         $color: map-get($palette, $color);
         @if (null != index($transparency-list, $tone)) {
-            $transparency: $tone/100;
+            $transparency: $tone * 0.01;
             @return rgba($color, $transparency);
         }
 
