feature/PORT-5479: Code Optimization

--- a/src/styles/prime-custom.scss
+++ b/src/styles/prime-custom.scss
@@ -368,7 +368,7 @@ $element-color-orange-80: palette(orange, 80);
     }
 }
 
-//spyglass for the input search field
+//spyglass for the inputs search field
 .p-input-icon-left {
     .pi.pi-search {
         font-weight: bold;
