--- a/src/styles/prime-custom.scss
+++ b/src/styles/prime-custom.scss
@@ -309,6 +309,13 @@ $element-color-orange-80: palette(orange, 80);
             background-color: $element-background-color-2;
             box-shadow: none;
         }
+
+        //search inputtext field
+        &.nexus-c-search__inputbox {
+            border-radius: 24px;
+            width: 640px;
+            object-fit: contain;
+        }
     }
 }
 
@@ -350,19 +357,6 @@ $element-color-orange-80: palette(orange, 80);
                 &.p-datepicker-trigger {
                     height: inherit;
                 }
-            }
-        }
-    }
-}
-
-//search inputtext field
-.nexus-c-endpoint-container {
-    .nexus-c-searchbox-wrapper {
-        &.container-fluid {
-            .nexus-c-search__inputbox {
-                border-radius: 24px;
-                width: 640px;
-                object-fit: contain;
             }
         }
     }
