--- a/src/pages/title-metadata/components/title-metadata-details/TitleDetails.scss
+++ b/src/pages/title-metadata/components/title-metadata-details/TitleDetails.scss
@@ -22,3 +22,11 @@
     font-size: 12px;
     color: rgba(black, 0.6);
 }
+
+.line {
+    border-left: 1px solid #a9a9a9;
+    justify-content: flex-end;
+    -webkit-box-pack: end;
+    display: flex;
+    height: 32px;
+}
