--- a/src/pages/avails/pre-plan-actions/PrePlanActions.scss
+++ b/src/pages/avails/pre-plan-actions/PrePlanActions.scss
@@ -1,4 +1,7 @@
 @import '~@vubiquity-nexus/portal-styles/scss/config';
+@import '~@vubiquity-nexus/portal-styles/scss/atlaskit/mixins';
+@import '~@vubiquity-nexus/portal-styles/scss/atlaskit/colors';
+@import '~@vubiquity-nexus/portal-styles/scss/color-palette';
 
 .nexus-c-selected-rights-actions {
     position: relative;
@@ -22,16 +25,16 @@
     }
 
     .nexus-c-selected-rights-actions__menu-item {
-        color: map-get($colors, nexus-primary-color);
+        @include margin(0, 3);
+        color: palette(black, 20);
         white-space: nowrap; // Keep each option in one line
-        padding-bottom: 10px;
-
-        &:last-child {
-            padding-bottom: 0;
-        }
+        padding-bottom: 0px;
+        font-weight: bold;
+        cursor: not-allowed;
 
         &--is-active {
             color: map-get($colors, nexus-secondary-color);
+            color: palette(black, 55);
             cursor: pointer;
         }
     }
