--- a/src/pages/title-metadata/components/title-metadata-details/TitleDetails.scss
+++ b/src/pages/title-metadata/components/title-metadata-details/TitleDetails.scss
@@ -1,4 +1,5 @@
 @import '~@vubiquity-nexus/portal-styles/scss/atlaskit/colors';
+@import '~@vubiquity-nexus/portal-styles/scss/color-palette';
 
 .nexus-c-title-details {
     width: 100%;
@@ -23,10 +24,9 @@
     color: rgba(black, 0.6);
 }
 
-.line {
+.nexus-c-line {
     border-left: 1px solid #a9a9a9;
     justify-content: flex-end;
-    -webkit-box-pack: end;
     display: flex;
     height: 32px;
 }
