feature/PORT-3880: Separating the styled.div css and creating new scss file

--- a/src/pages/title-metadata/components/title-metadata-details/TitleDetails.scss
+++ b/src/pages/title-metadata/components/title-metadata-details/TitleDetails.scss
@@ -25,7 +25,7 @@
 }
 
 .nexus-c-line {
-    border-left: 1px solid #a9a9a9;
+    border-left: 1px solid palette(black, 20);
     justify-content: flex-end;
     display: flex;
     height: 32px;
