PORT-5509: Bunch of small bugs fixed & logic updated

--- a/src/pages/avails/avails-table-toolbar/AvailsTableToolbar.scss
+++ b/src/pages/avails/avails-table-toolbar/AvailsTableToolbar.scss
@@ -36,9 +36,10 @@
 }
 
 .nexus-c-table-toolbar__separation-line {
+    @include margin(0, 3);
     width: 1px;
     height: 32px;
-    background-color: palette(black, 55);
+    background-color: palette(black, 20);
 }
 
 .nexus-c-table-toolbar__selected-button-container {
