--- a/src/styles/prime-custom.scss
+++ b/src/styles/prime-custom.scss
@@ -279,6 +279,11 @@ $element-color-orange-80: palette(orange, 80);
     }
 }
 
+.p-toast .p-toast-message .p-toast-message-content .p-toast-message-text {
+    width: 242px;
+    display: inline-block;
+    overflow-wrap: break-word;
+}
 .p-toast .p-toast-message.p-toast-message-warn,
 .p-toast .p-toast-message.p-toast-message-success,
 .p-toast .p-toast-message.p-toast-message-error {
