--- a/src/pages/avails/avails-table-toolbar/components/selected-button/SelectedButton.scss
+++ b/src/pages/avails/avails-table-toolbar/components/selected-button/SelectedButton.scss
@@ -11,3 +11,17 @@
     color: palette(black, 55);
     white-space: nowrap;
 }
+
+.p-button.p-togglebutton.p-component.nexus-c-button__avails-disabled {
+    border: none;
+    color: palette(black, 20);
+    cursor: not-allowed;
+    background: none !important;
+
+    &:hover, &:active {
+        color: palette(black, 20);
+        span {
+            color: palette(black, 20);
+        }
+    }
+}
