feature/PORT-5403: Update atlaskit libs

--- a/src/pages/avails/right-details/components/RightDetailsTags.scss
+++ b/src/pages/avails/right-details/components/RightDetailsTags.scss
@@ -3,3 +3,7 @@
 .nexus-c-right-details-tags > span {
     @include margin(0, 0, 0, 1.5);
 }
+
+.css-ceo7p7 {
+    background-color: rgb(223, 225, 230);
+}
