--- a/src/styles/prime-custom.scss
+++ b/src/styles/prime-custom.scss
@@ -358,6 +358,12 @@ $element-color-orange-80: palette(orange, 80);
             color: palette(black, 100);
         }
     }
+
+    .p-toast-message.p-toast-message-error {
+        color: #aa214b;
+        border: solid #aa214b;
+        border-width: 0 0 0 6px;
+    }
 }
 
 // Input Text
