bugfix/PORT-5506:code optimization

--- a/src/styles/prime-custom.scss
+++ b/src/styles/prime-custom.scss
@@ -155,10 +155,11 @@ $element-color-orange-80: palette(orange, 80);
         }
 
         &.p-button-icon-only {
-            width: 41px;
+            width: 32px;
+            margin-left: 12px;
 
             @media (max-width: 1600px) {
-                width: 32px;
+                margin-left: 0;
             }
         }
 
