bugfix/PORT-5603_2: Overwriting CSS property which on DEV gets priority while on my local it does not.

--- a/packages/ui/src/elements/nexus-dynamic-form/components/SideTabs/SideTabs.scss
+++ b/packages/ui/src/elements/nexus-dynamic-form/components/SideTabs/SideTabs.scss
@@ -6,7 +6,7 @@
 }
 
 .nexus-c-side-tabs__tab-button {
-    justify-content: left;
+    justify-content: left !important;
 }
 
 .nexus-c-side-tabs__tab-button span {
