PORT-5555: removed isEditorial

--- a/packages/ui/src/elements/nexus-person/NexusPerson.scss
+++ b/packages/ui/src/elements/nexus-person/NexusPerson.scss
@@ -34,8 +34,8 @@
     }
 }
 
-.nexus-c-nexus-person__info-modal {
-    width: calc(100% - 85px);
+.atlaskit-portal-container .nexus-c-nexus-person__info {
+    width: calc(100% - 5px);
 }
 
 .nexus-c-nexus-person-avails__info {
