--- a/src/pages/avails/ingest-panel/IngestPanel.scss
+++ b/src/pages/avails/ingest-panel/IngestPanel.scss
@@ -22,3 +22,9 @@
         justify-content: space-between;
     }
 }
+
+.ingest-panel-spinner {
+    width: 30px;
+    height: 30px;
+    margin-top: 1px;
+}
